   xml_flat in async mode - do not set parent_id
   onopen callback in async mode is fired AFTER the content has loaded and displayed

TODO:
 examples:
   one page with getJSON calls (bind, unbind)
   complex example
 update: 
   hotkeys (http://code.google.com/p/js-hotkeys/)
   faq
   home screenshots


CHANGELOG:
 v.0.9.5
   can now specify attributes for the nested <a> nodes (href, etc) - updated json format
   event optimization (fixed bug where beforemove/copy/etc where called from the origin tree)
   added scroll_spd setting (the speed at which the container scrolls if dragging near the edge)
   fixed scoll while drag & drop
   Safari & Chrome drag & drop fix
   close_all - no animation
   xml_flat and async bug fixed (by Alain)
   can supply id in create function (by ludo)
   more "IE8 compatible" :)
   added support for themes (+2 themes) (by j9850s)
    - in any data type if icon does not contain a "/" it is loaded form the theme folder
   fixed opening leaf nodes (by Limor.Schweitzer)
   dragging bug (by ignoranceisbliss0)
   added search functionality (opens all parents and adds class "search" to results) 
    - if async - a request is made to the server with a GET parameter, that should return commaseparated id's of nodes to be opened
   jQuery plugin mode - $().tree({opts})
 v.0.9.2
   async_data function fixed (by Alvin Schur)
   remove enhancement and event order fix (by j9850s)
   create bug fixed (by j9850s)
   borderTopWidth bug in IE fixed (by me.khaled)
   !NO MORE settings.dflt - now settings.selected - false, string or array & settings.opened - array
   selected cookie is now CSV (if multiple is on)
   getJSON attrib bug fixed (by eddie.con.carne)
   negation dragrules - begin with "!" (order is respected)
   drag various nodes on the tree (settings.rules.droppable)
   jQuery compatible mode (all $ are now jQuery)
   fixed remove bug when a node appears as selected but isn't (by nomen)