@@ -48,6 +48,42 @@
 }
 
 /* DEFAULT ICON */
-.tree .tree-default li a {
+.tree .tree-default li a, 
+.tree .tree-default li span {
 	background-image:url("f.png");
+}
+
+/* CONTEXT MENU */
+.tree .tree-default .context {
+	width:160px;
+	background:#F0F0F0 url("context.gif") 22px 0 repeat-y;
+	border:1px solid silver;
+}
+.tree .tree-default .context a, 
+.tree .tree-default .context a:hover {
+	text-decoration:none;
+	color:black;
+	text-indent:26px;
+	line-height:20px;
+	background-repeat: no-repeat;
+	background-position: 3px center;
+	padding:1px 0;
+}
+.tree .tree-default .context a:hover {
+	background-color: #e7f4f9;
+	border:1px solid #d8f0fa;
+	background-position: 2px center;
+	padding:0;
+	text-indent:25px;
+}
+
+.tree .tree-default .context .separator {
+	background:#FFFFFF;;
+	border-top:1px solid #E0E0E0;
+	font-size:1px;
+	height:1px;
+	line-height:1px;
+	margin:0 2px 0 24px;
+	min-height:1px;
+	display:block;
 }
