@@ -17,6 +17,8 @@ TODO:
 
 CHANGELOG:
  v.0.9.5
+   native context menu (by damir.secki)
+   multiple typeO (by JensGabe)
    can now specify attributes for the nested <a> nodes (href, etc) - updated json format
    event optimization (fixed bug where beforemove/copy/etc where called from the origin tree)
    added scroll_spd setting (the speed at which the container scrolls if dragging near the edge)
